<resources>
    <string name="app_name">Ordy</string>
    <string name="slogan">Eat anytime, anywhere: at home, at work, in the office, or even in the metro! Our app helps you order food wherever you are.</string>
    <string name="register">Registration</string>
    <string name="auth">Authorization</string>
    <string name="authUser">Sign in</string>
    <string name="hintPhone">Phone number</string>
    <string name="hintPass">Password</string>
    <string name="hintName">Name</string>
    <string name="addToCart">Move to cart</string>
    <string name="goToCart">Go to cart</string>
    <string name="textCart">Cart</string>
    <string name="btnMakeOrder">Make an order</string>
</resources>