<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/btnSignUp"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/btnSignIn"
            android:layout_margin="20dp"/>


    </LinearLayout>

</RelativeLayout>