<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/hintName"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="phone"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/hintPhone"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/hintPass"/>


    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="16sp"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/btnSignUp"
        android:layout_margin="20dp"/>

</RelativeLayout>