<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FoodDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/topPanel">

        <ImageView
            android:id="@+id/mainPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <TextView
            android:id="@+id/mainName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:background="#8DB8B8B8"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8D44995C"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8DB8B8B8"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/topPanel">

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/btnSignIn"
            android:onClick="btnAddToCart"
            android:padding="15dp"
            android:text="@string/addToCart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btnGoToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToCart"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/btnSignUp"
            android:layout_margin="10dp"/>
    </LinearLayout>

</RelativeLayout>